--- a/src/css/components/TwitterButton.css
+++ b/src/css/components/TwitterButton.css
@@ -2,8 +2,10 @@
 
 
     button {
-        width: 78px;
-        height: 32px;
+        --min-width : 78px;
+        --height : 32px;
+        min-width: var(--min-width);
+        height: var(--height);
 
         padding: 0 16px;
 
@@ -14,11 +16,18 @@
 
         font-weight: bolder;
         font-size: 14px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
         
         &[data-follow="true"] {
             --backgroun-color: #16181c;
             --background-color-hover: #d7dbdc;
             --text-color: black;
+
+            position: relative;
+            z-index: 0;
 
             border: 1px solid white;
             
@@ -37,6 +46,32 @@
                 color: red;
 
                 border: 1px solid red;
+                
+                &::before {
+                    position: absolute;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    z-index: 2;
+    
+                    width: calc(var(--min-width) - 8px);
+                    height: calc(var(--height) - 2px); 
+
+                    padding: inherit;
+                    margin: 0 auto;
+
+                    border-radius: inherit;
+                    border: inherit;
+                    
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+    
+                    background-color: inherit;
+
+                    text-align: center;
+    
+                    content: 'unfollow';
+                }
             }
         }
 
