--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,4 +7,5 @@ body{
     display: flex;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(79, 79, 79);
 }
